--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -40,7 +40,7 @@ const s3Path = "https://tm-photo-portfolio.s3.amazonaws.com/website-assets";
 const topAlbumSeed: CarouselImage[] = [
   {
     url: "/albums/hmhas.jpeg",
-    title: "Billie Eilish - Hit me Hard and Soft",
+    title: "Billie Eilish - Hit Me Hard and Soft",
   },
   {
     url: "/albums/brat.jpeg",
