--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title, hideHeader, badgeText } = Astro.props;
         } else
           document.documentElement.setAttribute(
             "data-theme",
-            localStorage.getItem("theme")
+            localStorage.getItem("theme"),
           );
         // "theme" LocalStorage value is set by the package to remember user preference.
         // The value is checked and applyed before rendering anything.
