--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -54,7 +54,7 @@ const pages = [
       >
       <button
         data-act-class="ACTIVECLASS"
-        data-toggle-theme="dracula,light"
+        data-toggle-theme="pastel,dim"
         class="btn btn-ghost btn-accent"
       >
         <SunMoon size={24} />
@@ -80,7 +80,7 @@ const pages = [
           >
           <button
             data-act-class="ACTIVECLASS"
-            data-toggle-theme="dracula,light"
+            data-toggle-theme="pastel,dim"
             class="btn btn-ghost btn-accent"
           >
             <SunMoon size={24} />
