--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title, hideHeader, badgeText } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="pastel">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -29,17 +29,12 @@ const { title, hideHeader, badgeText } = Astro.props;
       document.addEventListener("astro:after-swap", themeChange);
     </script>
     <script is:inline>
+      const validThemes = new Set(["pastel", "dim"]);
       const checkTheme = () => {
-        // ☝️ This script prevent the FART effect.
-        if (localStorage.getItem("theme") === null) {
-          document.documentElement.setAttribute("data-theme", "light");
-        } else
-          document.documentElement.setAttribute(
-            "data-theme",
-            localStorage.getItem("theme"),
-          );
-        // "theme" LocalStorage value is set by the package to remember user preference.
-        // The value is checked and applyed before rendering anything.
+        const cur = localStorage.getItem("theme") ?? "";
+        if (validThemes.has(cur)) {
+          document.documentElement.setAttribute("data-theme", cur);
+        } else document.documentElement.setAttribute("data-theme", "pastel");
       };
       checkTheme();
       document.addEventListener("astro:after-swap", checkTheme);
