--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -125,7 +125,7 @@ const tiles: Tile[] = [
   {
     company: "",
     title: "Expense csv parser",
-    desc: "Categorize, track and visualize expenses from Bank CSV exports",
+    desc: "Categorize, track and visualize expenses from bank CSV exports",
     imageSrc: moneyImg,
     links: ["https://github.com/mtanzim/cc-csv-parser"],
     linkTitles: ["Code"],
